--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -33,8 +33,8 @@ dynamic = [
 dependencies = ["numpy>=1.20",]
 
 [project.urls]
-Homepage = 'https://github.com/JosephChotard'
-Source = 'https://github.com/JosephChotard'
+Homepage = 'https://github.com/JosephChotard/ultrafastgoertzel'
+Source = 'https://github.com/JosephChotard/ultrafastgoertzel'
 
 [project.optional-dependencies]
 test = ["pytest>=7.0"]
