--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
       - main
       - master
     tags:
-      - '*'
+      - "*"
   pull_request:
   workflow_dispatch:
 
@@ -56,8 +56,8 @@ jobs:
           python3 -m venv .venv
           source .venv/bin/activate
           pip install ultrafastgoertzel --find-links dist --force-reinstall
-          pip install pytest
-          cd bindings/python && pytest
+          pip install pytest numpy
+          cd bindings/python && pytest tests/
       - name: pytest
         if: ${{ !startsWith(matrix.platform.target, 'x86') && matrix.platform.target != 'ppc64' }}
         uses: uraimo/run-on-arch-action@v2
@@ -72,7 +72,8 @@ jobs:
           run: |
             set -e
             pip3 install ultrafastgoertzel --find-links dist --force-reinstall
-            cd bindings/python && pytest
+            pip3 install numpy
+            cd bindings/python && pytest tests/
 
   musllinux:
     runs-on: ${{ matrix.platform.runner }}
@@ -115,8 +116,8 @@ jobs:
             python3 -m virtualenv .venv
             source .venv/bin/activate
             pip install ultrafastgoertzel --no-index --find-links dist --force-reinstall
-            pip install pytest
-            cd bindings/python && pytest
+            pip install pytest numpy
+            cd bindings/python && pytest tests/
       - name: pytest
         if: ${{ !startsWith(matrix.platform.target, 'x86') }}
         uses: uraimo/run-on-arch-action@v2
@@ -130,9 +131,9 @@ jobs:
             set -e
             python3 -m virtualenv .venv
             source .venv/bin/activate
-            pip install pytest
+            pip install pytest numpy
             pip install ultrafastgoertzel --find-links dist --force-reinstall
-            cd bindings/python && pytest
+            cd bindings/python && pytest tests/
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
@@ -168,8 +169,8 @@ jobs:
           python3 -m venv .venv
           source .venv/Scripts/activate
           pip install ultrafastgoertzel --find-links dist --force-reinstall
-          pip install pytest
-          cd bindings/python && pytest
+          pip install pytest numpy
+          cd bindings/python && pytest tests/
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
@@ -203,8 +204,8 @@ jobs:
           python3 -m venv .venv
           source .venv/bin/activate
           pip install ultrafastgoertzel --find-links dist --force-reinstall
-          pip install pytest
-          cd bindings/python && pytest
+          pip install pytest numpy
+          cd bindings/python && pytest tests/
 
   sdist:
     runs-on: ubuntu-latest
@@ -238,7 +239,7 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
-          subject-path: 'wheels-*/*'
+          subject-path: "wheels-*/*"
       - name: Publish to PyPI
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: PyO3/maturin-action@v1
