--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -56,3 +56,7 @@ line-length = 119
 target-version = "py38"
 lint.ignore = [
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py", "test.py"]
