--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "ultrafastgoertzel"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 authors = [
     {name = 'Joseph Chotard', email = 'joseph@chotard.com'},
 ]
@@ -17,7 +17,6 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -30,7 +29,7 @@ dynamic = [
     "description",
     "license",
     "readme",]
-dependencies = ["numpy>=2.0",]
+dependencies = ["numpy>=2.0"]
 
 [project.urls]
 Homepage = 'https://github.com/JosephChotard/ultrafastgoertzel'
